[gd_scene load_steps=59 format=3 uid="uid://btvwx1xqjgghb"]

[ext_resource type="Script" path="res://scripts/wallets.gd" id="1_aiqld"]
[ext_resource type="Script" path="res://scripts/balances.gd" id="1_ck3nu"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_qpwej"]
[ext_resource type="Script" path="res://scripts/balance.gd" id="2_ah0r3"]
[ext_resource type="Script" path="res://scripts/nfts.gd" id="4_pdyft"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ywwwe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lo2mf"]
texture = SubResource("CanvasTexture_ywwwe")
modulate_color = Color(0.0352941, 0.0431373, 0.101961, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_illgt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4k8t6"]
texture = SubResource("CanvasTexture_illgt")
modulate_color = Color(0.968627, 0.968627, 0.972549, 0.0509804)

[sub_resource type="CanvasTexture" id="CanvasTexture_py6ro"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fy3eu"]
texture = SubResource("CanvasTexture_py6ro")
modulate_color = Color(0.0352941, 0.0431373, 0.101961, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_i1inx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vqykd"]
texture = SubResource("CanvasTexture_i1inx")
modulate_color = Color(0.0352941, 0.0431373, 0.101961, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_7e2lp"]
specular_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mo8bn"]
texture = SubResource("CanvasTexture_7e2lp")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_41bmq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1fiub"]
texture = SubResource("CanvasTexture_41bmq")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_uphsl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0dukc"]
texture = SubResource("CanvasTexture_uphsl")
texture_margin_left = 8.0
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_2p7oq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sumqp"]
texture = SubResource("CanvasTexture_2p7oq")
texture_margin_left = 8.0
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_g6cis"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hcfqe"]
texture = SubResource("CanvasTexture_g6cis")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_527h2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ybrp4"]
texture = SubResource("CanvasTexture_527h2")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_hk3u5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ntwpj"]
texture = SubResource("CanvasTexture_hk3u5")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypulg"]
bg_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jj05q"]
bg_color = Color(0.168627, 0.231373, 0.352941, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_1v0b3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iechn"]
texture = SubResource("CanvasTexture_1v0b3")
texture_margin_left = 8.0
modulate_color = Color(0.141, 0.169, 0.251, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_wehgy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3obar"]
texture = SubResource("CanvasTexture_wehgy")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_uo77j"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_737o6"]
texture = SubResource("CanvasTexture_uo77j")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_gp2rk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0hsi6"]
texture = SubResource("CanvasTexture_gp2rk")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_7d8wk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jmcrp"]
texture = SubResource("CanvasTexture_7d8wk")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_c8coc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7whiw"]
texture = SubResource("CanvasTexture_c8coc")
texture_margin_left = 8.0
modulate_color = Color(0.141, 0.169, 0.251, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_kdapq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f4omo"]
texture = SubResource("CanvasTexture_kdapq")
texture_margin_left = 8.0
modulate_color = Color(0.141, 0.169, 0.251, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_dehp0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ijk1f"]
texture = SubResource("CanvasTexture_dehp0")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_8qqgw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_glolc"]
texture = SubResource("CanvasTexture_8qqgw")
texture_margin_left = 8.0
modulate_color = Color(0.141, 0.169, 0.251, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_aw5i8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8a4t"]
texture = SubResource("CanvasTexture_aw5i8")
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_le4uj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_68kuo"]
texture = SubResource("CanvasTexture_le4uj")
texture_margin_left = 8.0
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_kk4wo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tfmrg"]
texture = SubResource("CanvasTexture_kk4wo")
modulate_color = Color(0.141, 0.169, 0.251, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_7ekmk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xfp14"]
texture = SubResource("CanvasTexture_7ekmk")
texture_margin_left = 8.0
modulate_color = Color(0.141176, 0.168627, 0.25098, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_50ggq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4c4sw"]
texture = SubResource("CanvasTexture_50ggq")
modulate_color = Color(0.141, 0.169, 0.251, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ykgew"]

[node name="Main" type="Node2D"]
z_as_relative = false
script = ExtResource("1_qpwej")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1153, 42)
offset_left = -1.0
offset_right = 1152.0
offset_bottom = 44.0
theme_override_styles/panel = SubResource("StyleBoxTexture_lo2mf")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(1115, 0)
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_constants/separation = 10

[node name="wallet" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
text = "Wallets"

[node name="balance" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
text = "Balance"

[node name="transcation" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
text = "Transaction"

[node name="nft" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
text = "NFTs"

[node name="multisig" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
text = "MultiSig"

[node name="TabContainer" type="TabContainer" parent="."]
offset_top = 44.0
offset_right = 1152.0
offset_bottom = 647.0
theme_override_styles/tab_focus = SubResource("StyleBoxTexture_4k8t6")
theme_override_styles/tabbar_background = SubResource("StyleBoxTexture_fy3eu")
theme_override_styles/panel = SubResource("StyleBoxTexture_vqykd")
current_tab = 3
tabs_visible = false
all_tabs_in_front = true

[node name="Wallets" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("1_aiqld")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Wallets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 20.0
offset_right = -19.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="h_box_import" type="HBoxContainer" parent="TabContainer/Wallets/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="box_key" type="TextEdit" parent="TabContainer/Wallets/VBoxContainer/h_box_import"]
custom_minimum_size = Vector2(661, 52)
layout_mode = 2
theme_override_colors/background_color = Color(0.141176, 0.168627, 0.25098, 1)
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter mnemonic or private key"
autowrap_mode = 2

[node name="import_mnemonic" type="Button" parent="TabContainer/Wallets/VBoxContainer/h_box_import"]
custom_minimum_size = Vector2(207, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_mo8bn")
text = "Import mnemonic"

[node name="import_private_key" type="Button" parent="TabContainer/Wallets/VBoxContainer/h_box_import"]
custom_minimum_size = Vector2(207, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_1fiub")
text = "import private key"

[node name="h_box_gen" type="HBoxContainer" parent="TabContainer/Wallets/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20
alignment = 2

[node name="scheme" type="OptionButton" parent="TabContainer/Wallets/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_0dukc")
item_count = 3
popup/item_0/text = "ED25519"
popup/item_0/id = 0
popup/item_1/text = "Secp256k1"
popup/item_1/id = 1
popup/item_2/text = "Secp256r1"
popup/item_2/id = 2

[node name="word" type="OptionButton" parent="TabContainer/Wallets/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_sumqp")
item_count = 4
popup/item_0/text = "word15"
popup/item_0/id = 1
popup/item_1/text = "word18"
popup/item_1/id = 2
popup/item_2/text = "word21"
popup/item_2/id = 3
popup/item_3/text = "word24"
popup/item_3/id = 4

[node name="create_custom" type="Button" parent="TabContainer/Wallets/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_hcfqe")
text = "Create custom"

[node name="generate" type="Button" parent="TabContainer/Wallets/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_ybrp4")
text = "Generate"

[node name="load" type="Button" parent="TabContainer/Wallets/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_ntwpj")
text = "Load"

[node name="Label" type="Label" parent="TabContainer/Wallets/VBoxContainer"]
layout_mode = 2
text = "List wallets"

[node name="listWalletsTree" type="Tree" parent="TabContainer/Wallets/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ypulg")
theme_override_styles/title_button_normal = SubResource("StyleBoxFlat_jj05q")
columns = 5
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
allow_search = false
hide_root = true

[node name="Balance" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_ah0r3")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Balance"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 20.0
offset_right = -19.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="h_box_address" type="HBoxContainer" parent="TabContainer/Balance/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="address_box" type="OptionButton" parent="TabContainer/Balance/VBoxContainer/h_box_address"]
custom_minimum_size = Vector2(1115, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_iechn")

[node name="h_box_gen" type="HBoxContainer" parent="TabContainer/Balance/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20
alignment = 2

[node name="btn_get_balances" type="Button" parent="TabContainer/Balance/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_3obar")
text = "get balances"

[node name="btn_get_all_balances_sync" type="Button" parent="TabContainer/Balance/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_737o6")
text = "get balances sync"

[node name="btn_get_balance_sync" type="Button" parent="TabContainer/Balance/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_0hsi6")
text = "get balance sync"

[node name="btn_get_total_supply_sync" type="Button" parent="TabContainer/Balance/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_0hsi6")
text = "get total supply"

[node name="btn_get_coins_sync" type="Button" parent="TabContainer/Balance/VBoxContainer/h_box_gen"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_0hsi6")
text = "get coins"

[node name="Label" type="Label" parent="TabContainer/Balance/VBoxContainer"]
layout_mode = 2
text = "Result"

[node name="list_result_tree" type="Tree" parent="TabContainer/Balance/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ypulg")
theme_override_styles/title_button_normal = SubResource("StyleBoxFlat_jj05q")
columns = 4
column_titles_visible = true
allow_reselect = true
allow_rmb_select = true
allow_search = false
hide_root = true

[node name="Transaction" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("1_ck3nu")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Transaction"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 20.0
offset_right = -19.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="h_box_address" type="HBoxContainer" parent="TabContainer/Transaction/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="address_box" type="OptionButton" parent="TabContainer/Transaction/VBoxContainer/h_box_address"]
custom_minimum_size = Vector2(1115, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_iechn")

[node name="h_box_balance" type="HBoxContainer" parent="TabContainer/Transaction/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/Transaction/VBoxContainer/h_box_balance"]
custom_minimum_size = Vector2(140, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total Balance:"
vertical_alignment = 1

[node name="total_balance" type="Label" parent="TabContainer/Transaction/VBoxContainer/h_box_balance"]
custom_minimum_size = Vector2(501, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="btn_get_coins_sync" type="Button" parent="TabContainer/Transaction/VBoxContainer/h_box_balance"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_0hsi6")
text = "Load Banlance"

[node name="btn_request_faucet" type="Button" parent="TabContainer/Transaction/VBoxContainer/h_box_balance"]
custom_minimum_size = Vector2(207, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_jmcrp")
text = "Request Faucet"

[node name="h_box_recipient" type="HBoxContainer" parent="TabContainer/Transaction/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="txt_recipient_address" type="TextEdit" parent="TabContainer/Transaction/VBoxContainer/h_box_recipient"]
custom_minimum_size = Vector2(1115, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_7whiw")
placeholder_text = "Enter Recipient Address"

[node name="h_box_send" type="HBoxContainer" parent="TabContainer/Transaction/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="txt_amount" type="TextEdit" parent="TabContainer/Transaction/VBoxContainer/h_box_send"]
custom_minimum_size = Vector2(888, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_f4omo")
placeholder_text = "Enter Amount"

[node name="btn_send" type="Button" parent="TabContainer/Transaction/VBoxContainer/h_box_send"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_ijk1f")
text = "send"

[node name="h_box_send_with_sponser" type="HBoxContainer" parent="TabContainer/Transaction/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="txt_sponser_address" type="TextEdit" parent="TabContainer/Transaction/VBoxContainer/h_box_send_with_sponser"]
custom_minimum_size = Vector2(888, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_glolc")
placeholder_text = "Enter Sponser Address"

[node name="btn_send_with_sponser" type="Button" parent="TabContainer/Transaction/VBoxContainer/h_box_send_with_sponser"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_h8a4t")
text = "Send With Sponser"

[node name="result" type="RichTextLabel" parent="TabContainer/Transaction"]
layout_mode = 0
offset_left = 21.0
offset_top = 412.0
offset_right = 1134.0
offset_bottom = 594.0

[node name="scroll" type="ScrollContainer" parent="TabContainer/Transaction/result"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Nfts" type="TabBar" parent="TabContainer"]
layout_mode = 2
script = ExtResource("4_pdyft")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Nfts"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 20.0
offset_right = -19.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="h_box_address" type="HBoxContainer" parent="TabContainer/Nfts/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="address_box" type="OptionButton" parent="TabContainer/Nfts/VBoxContainer/h_box_address"]
custom_minimum_size = Vector2(1115, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_iechn")

[node name="Label" type="Label" parent="TabContainer/Nfts/VBoxContainer"]
layout_mode = 2
text = "Mint NFT:"

[node name="h_box_mint" type="HBoxContainer" parent="TabContainer/Nfts/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="nft_name" type="TextEdit" parent="TabContainer/Nfts/VBoxContainer/h_box_mint"]
custom_minimum_size = Vector2(283, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_68kuo")
placeholder_text = "Name"

[node name="nft_description" type="TextEdit" parent="TabContainer/Nfts/VBoxContainer/h_box_mint"]
custom_minimum_size = Vector2(283, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_68kuo")
placeholder_text = "Description"

[node name="nft_uri" type="TextEdit" parent="TabContainer/Nfts/VBoxContainer/h_box_mint"]
custom_minimum_size = Vector2(282, 52)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_68kuo")
placeholder_text = "URI"

[node name="btn_mint" type="Button" parent="TabContainer/Nfts/VBoxContainer/h_box_mint"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_tfmrg")
text = "Mint"

[node name="Label2" type="Label" parent="TabContainer/Nfts/VBoxContainer"]
layout_mode = 2
text = "Transfer NFT:"

[node name="h_box_transfer" type="HBoxContainer" parent="TabContainer/Nfts/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="nft_id" type="TextEdit" parent="TabContainer/Nfts/VBoxContainer/h_box_transfer"]
custom_minimum_size = Vector2(282, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xfp14")
placeholder_text = "Enter NFT ID"

[node name="address" type="TextEdit" parent="TabContainer/Nfts/VBoxContainer/h_box_transfer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xfp14")
placeholder_text = "Enter Address"

[node name="btn_send" type="Button" parent="TabContainer/Nfts/VBoxContainer/h_box_transfer"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_4c4sw")
text = "Send
"

[node name="btn_load" type="Button" parent="TabContainer/Nfts/VBoxContainer/h_box_transfer"]
custom_minimum_size = Vector2(207, 52)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_4c4sw")
text = "load"

[node name="result" type="RichTextLabel" parent="TabContainer/Nfts/VBoxContainer"]
custom_minimum_size = Vector2(0, 41)
layout_mode = 2

[node name="Label3" type="Label" parent="TabContainer/Nfts/VBoxContainer"]
layout_mode = 2
text = "List NFts"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Nfts/VBoxContainer"]
custom_minimum_size = Vector2(0, 187)
layout_mode = 2

[node name="nftsList" type="Panel" parent="TabContainer/Nfts/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(1115, 187)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ykgew")

[node name="Multisig" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[connection signal="pressed" from="Panel/HBoxContainer/wallet" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="Panel/HBoxContainer/balance" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="Panel/HBoxContainer/transcation" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="Panel/HBoxContainer/nft" to="." method="_on_button_pressed" binds= [3]]
[connection signal="pressed" from="Panel/HBoxContainer/multisig" to="." method="_on_button_pressed" binds= [4]]
[connection signal="pressed" from="TabContainer/Wallets/VBoxContainer/h_box_import/import_mnemonic" to="TabContainer/Wallets" method="_on_import_mnemonic_pressed"]
[connection signal="pressed" from="TabContainer/Wallets/VBoxContainer/h_box_import/import_private_key" to="TabContainer/Wallets" method="_on_import_private_key_pressed"]
[connection signal="pressed" from="TabContainer/Wallets/VBoxContainer/h_box_gen/create_custom" to="TabContainer/Wallets" method="_on_create_custom_pressed"]
[connection signal="pressed" from="TabContainer/Wallets/VBoxContainer/h_box_gen/generate" to="TabContainer/Wallets" method="_on_generate_pressed"]
[connection signal="pressed" from="TabContainer/Wallets/VBoxContainer/h_box_gen/load" to="TabContainer/Wallets" method="_on_load_pressed"]
[connection signal="button_clicked" from="TabContainer/Wallets/VBoxContainer/listWalletsTree" to="TabContainer/Wallets" method="_on_list_wallets_tree_button_clicked"]
[connection signal="pressed" from="TabContainer/Balance/VBoxContainer/h_box_gen/btn_get_balances" to="TabContainer/Balance" method="_on_btn_get_balances_pressed"]
[connection signal="pressed" from="TabContainer/Balance/VBoxContainer/h_box_gen/btn_get_all_balances_sync" to="TabContainer/Balance" method="_on_btn_get_all_balances_sync_pressed"]
[connection signal="pressed" from="TabContainer/Balance/VBoxContainer/h_box_gen/btn_get_balance_sync" to="TabContainer/Balance" method="_on_btn_get_balance_sync_pressed"]
[connection signal="pressed" from="TabContainer/Balance/VBoxContainer/h_box_gen/btn_get_total_supply_sync" to="TabContainer/Balance" method="_on_btn_get_total_supply_sync_pressed"]
[connection signal="pressed" from="TabContainer/Balance/VBoxContainer/h_box_gen/btn_get_coins_sync" to="TabContainer/Balance" method="_on_btn_get_coins_sync_pressed"]
[connection signal="button_clicked" from="TabContainer/Balance/VBoxContainer/list_result_tree" to="TabContainer/Wallets" method="_on_list_wallets_tree_button_clicked"]
[connection signal="pressed" from="TabContainer/Transaction/VBoxContainer/h_box_balance/btn_get_coins_sync" to="TabContainer/Transaction" method="_on_btn_get_coins_sync_pressed"]
[connection signal="pressed" from="TabContainer/Transaction/VBoxContainer/h_box_balance/btn_request_faucet" to="TabContainer/Transaction" method="_on_btn_request_faucet_pressed"]
[connection signal="pressed" from="TabContainer/Transaction/VBoxContainer/h_box_send/btn_send" to="TabContainer/Transaction" method="_on_btn_send_pressed"]
[connection signal="pressed" from="TabContainer/Transaction/VBoxContainer/h_box_send_with_sponser/btn_send_with_sponser" to="TabContainer/Transaction" method="_on_btn_send_with_sponser_pressed"]
[connection signal="pressed" from="TabContainer/Nfts/VBoxContainer/h_box_mint/btn_mint" to="TabContainer/Nfts" method="_on_btn_mint_pressed"]
[connection signal="pressed" from="TabContainer/Nfts/VBoxContainer/h_box_transfer/btn_send" to="TabContainer/Nfts" method="_on_btn_send_pressed"]
[connection signal="pressed" from="TabContainer/Nfts/VBoxContainer/h_box_transfer/btn_load" to="TabContainer/Nfts" method="_on_btn_load_pressed"]
